# Projet_Data_Integration

./: .gitignore  pyproject.toml
dashboard/: README.md  app.py
dashboard/.streamlit/: config.toml
dashboard/lib/: data.py  profiling.py
dashboard/pages/: 1_Table_Explorer.py  2_Data_Quality_Report.py
deliverables/: Road_Safety_Open_Data.html  gold_star_schema.drawio
notebooks/: Road_Safety_Open_Data.ipynb
