[project]
name = "projet-data-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "setuptools<81",
    "streamlit>=1.58.0",
    "ydata-profiling>=4.18.4",
]
